# auto-home

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  DEPLOYMENT.md  PROJECT_ANALYSIS.md  README.md  auto_home.db  pyproject.toml
.vercel/: project.json
api/: index.py
backend/: .env  requirements.txt
backend/app/: main.py
backend/app/models/: db.py  models.py
backend/app/scheduler/: task_scheduler.py
backend/app/services/: ble_service.py  cloudpets_service.py  petkit_service.py
backend/app/utils/: cache_manager.py
backend/static/: feeder.html  feeder_plans.html  index.html  litterbox.html  scale.html
miniprogram/: app.js  app.json  project.config.json
miniprogram/pages/feeder/: feeder.js  feeder.wxml  feeder.wxss
miniprogram/pages/index/: index.json  index.wxml  index.wxss
miniprogram/pages/litterbox/: litterbox.js  litterbox.wxml  litterbox.wxss
miniprogram/pages/scale/: scale.js  scale.wxml  scale.wxss
miniprogram/utils/: ble_scale.js
